made the hamburger menu more visible and fixed the close button formatting a little bit, still not quite right

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,6 +104,11 @@ a:hover {
     -webkit-text-fill-color: none;
 }
 
+.hamburger {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: #fcfdfd;
+}
+
 .sideNavBar {
     height: 100%;
     width: 0;
@@ -131,9 +136,13 @@ a:hover {
 }
 
 .sideNavBar .closenav {
-    position: absoulte; 
     top: 0;
-    right: 25px; 
-    font-size: 1em;
-    margin-left: 50px; 
+    font-size: 2em;
+    margin-left: 200px; 
+
+}
+
+.closenav:hover {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: #fcfdfd;
 }
